# ImageToolboxLibs

./: .gitignore  README.md  build.gradle.kts  compose_compiler_config.conf  gradle.properties  jitpack.yml  settings.gradle.kts
libs/advanced-crop/src/main/cpp/: Advancedcrop.cpp  CMakeLists.txt
libs/djvu-coder/: CMakeLists.txt  build.gradle.kts
libs/djvu-coder/src/main/cpp/: CMakeLists.txt  djvu-coder.cpp
libs/djvu-coder/src/main/cpp/libdjvu/: Arrays.cpp  Arrays.h  BSByteStream.cpp  BSByteStream.h  BSEncodeByteStream.cpp  ByteStream.cpp  ByteStream.h  DataPool.cpp  DataPool.h  DjVmDir.cpp  DjVmDir.h  DjVmDir0.cpp  DjVmDir0.h  DjVmDoc.cpp  DjVmDoc.h  DjVmNav.cpp  DjVmNav.h  DjVuAnno.cpp  DjVuAnno.h  DjVuDocEditor.cpp  DjVuDocEditor.h  DjVuDocument.cpp  DjVuDocument.h  DjVuDumpHelper.cpp  DjVuDumpHelper.h  DjVuErrorList.cpp  DjVuErrorList.h  DjVuFile.cpp  DjVuFile.h  DjVuFileCache.cpp  DjVuFileCache.h  DjVuGlobal.cpp  DjVuGlobal.h  DjVuImage.cpp  DjVuImage.h  DjVuInfo.cpp  DjVuInfo.h  DjVuMessage.cpp  DjVuMessage.h  DjVuMessageLite.cpp  (+67 more)
libs/djvu-coder/src/main/java/com/t8rin/djvu_coder/: DJVUDecoder.kt  Utils.kt
libs/gif-converter/src/main/rust/gif_encoder/: Cargo.toml
libs/gif-converter/src/main/rust/gif_encoder/src/: lib.rs
libs/gmic/src/main/cpp/: CMakeLists.txt  gmic_jni.cpp
libs/raw-coder/src/main/cpp/: CMakeLists.txt  raw_coder.cpp
libs/raw-coder/src/main/cpp/libraw/internal/: dcraw_defs.h  dcraw_fileio_defs.h  defines.h  dmp_include.h  libraw_cameraids.h  libraw_checked_buffer.h  libraw_cxx_defs.h  libraw_internal_funcs.h  losslessjpeg.h  var_defines.h  x3f_tools.h
libs/raw-coder/src/main/cpp/libraw/libraw/: libraw.h  libraw_alloc.h  libraw_const.h  libraw_datastream.h  libraw_internal.h  libraw_types.h
libs/raw-coder/src/main/cpp/libraw/src/: Makefile  libraw_c_api.cpp  libraw_datastream.cpp
libs/raw-coder/src/main/cpp/libraw/src/decoders/: canon_600.cpp  crx.cpp  decoders_dcraw.cpp  decoders_libraw.cpp  decoders_libraw_dcrdefs.cpp  dng.cpp  fp_dng.cpp  fuji_compressed.cpp  generic.cpp  kodak_decoders.cpp  load_mfbacks.cpp  olympus14.cpp  pana8.cpp  smal.cpp  sonycc.cpp  unpack.cpp  unpack_thumb.cpp
libs/raw-coder/src/main/cpp/libraw/src/decompressors/: losslessjpeg.cpp
libs/raw-coder/src/main/cpp/libraw/src/demosaic/: aahd_demosaic.cpp  ahd_demosaic.cpp  dcb_demosaic.cpp  dht_demosaic.cpp  misc_demosaic.cpp  xtrans_demosaic.cpp
libs/raw-coder/src/main/cpp/libraw/src/integration/: dngsdk_glue.cpp  rawspeed_glue.cpp
libs/raw-coder/src/main/cpp/libraw/src/metadata/: adobepano.cpp  canon.cpp  ciff.cpp  cr3_parser.cpp  epson.cpp  exif_gps.cpp  fuji.cpp  hasselblad_model.cpp  identify.cpp  identify_tools.cpp  kodak.cpp  leica.cpp  makernotes.cpp  mediumformat.cpp  minolta.cpp  misc_parsers.cpp  nikon.cpp  normalize_model.cpp  olympus.cpp  p1.cpp  pentax.cpp  samsung.cpp  sony.cpp  tiff.cpp
libs/raw-coder/src/main/cpp/libraw/src/postprocessing/: aspect_ratio.cpp  dcraw_process.cpp  mem_image.cpp  postprocessing_aux.cpp  postprocessing_ph.cpp  postprocessing_utils.cpp  postprocessing_utils_dcrdefs.cpp
libs/raw-coder/src/main/cpp/libraw/src/preprocessing/: ext_preprocess.cpp  preprocessing_ph.cpp  raw2image.cpp  subtract_black.cpp
libs/raw-coder/src/main/cpp/libraw/src/tables/: cameralist.cpp  colorconst.cpp  colordata.cpp
libs/raw-coder/src/main/cpp/libraw/src/utils/: curves.cpp  decoder_info.cpp  init_close_utils.cpp  open.cpp  phaseone_processing.cpp  read_utils.cpp  thumb_utils.cpp  utils_dcraw.cpp  utils_libraw.cpp
libs/raw-coder/src/main/cpp/libraw/src/write/: file_write.cpp  tiff_writer.cpp  write_ph.cpp
libs/raw-coder/src/main/cpp/libraw/src/x3f/: x3f_parse_process.cpp  x3f_utils_patched.cpp
libs/trickle/src/main/cpp/: AverageSmoothFilter.cpp  AverageSmoothFilter.h  BrightContrastFilter.cpp  BrightContrastFilter.h  CMakeLists.txt  ColorTransfer.cpp  ColorTranslator.h  ColorUtils.cpp  ColorUtils.h  GammaCorrectionFilter.cpp  GammaCorrectionFilter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GothamFilter.cpp  GothamFilter.h  HDRFilter.cpp  HDRFilter.h  HueSaturationFilter.cpp  HueSaturationFilter.h  ImageFilter.h  MotionBlurFilter.cpp  MotionBlurFilter.h  OilFilter.cpp  OilFilter.h  ProcessingFilters.cpp  SharpenFilter.cpp  SharpenFilter.h  SketchFilter.cpp  SketchFilter.h  SoftGlowFilter.cpp  SoftGlowFilter.h  TvFilter.cpp  TvFilter.h  trickle.cpp
libs/trickle/src/main/cpp/lowpoly/: lowpoly-lib.cpp
libs/trickle/src/main/cpp/lowpoly/cairo/: cairo-analysis-surface-private.h  cairo-arc-private.h  cairo-array-private.h  cairo-backend-private.h  cairo-box-inline.h  cairo-cache-private.h  cairo-clip-inline.h  cairo-compiler-private.h  cairo-composite-rectangles-private.h  cairo-compositor-private.h  cairo-damage-private.h  cairo-default-context-private.h  cairo-device-private.h  cairo-dwrite-private.hpp  cairo-error-inline.h  cairo-error-private.h  cairo-fixed-private.h  cairo-freed-pool-private.h  cairo-freelist-private.h  cairo-ft-private.h  cairo-ft.h  cairo-gstate-private.h  cairo-hash-private.h  cairo-image-surface-private.h  cairo-line-inline.h  cairo-line-private.h  cairo-list-inline.h  cairo-malloc-private.h  cairo-mutex-private.h  cairo-output-stream-private.h  cairo-paginated-private.h  cairo-path-fixed-private.h  cairo-path-private.h  cairo-pattern-inline.h  cairo-pattern-private.h  cairo-pdf-operators-private.h  cairo-pdf-shading-private.h  cairo-pdf-surface-private.h  cairo-pdf.h  cairo-pixman-private.h  (+71 more)
libs/trickle/src/main/cpp/lowpoly/include/: ft2build.h
libs/trickle/src/main/cpp/lowpoly/include/freetype/: freetype.h  ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftchapters.h  ftcid.h  ftcolor.h  ftdriver.h  fterrdef.h  fterrors.h  ftfntfmt.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlogging.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftmoderr.h  ftotval.h  ftoutln.h  ftparams.h  ftpfr.h  ftrender.h  ftsizes.h  (+11 more)
libs/trickle/src/main/cpp/lowpoly/png/: png.h  pngconf.h  pngstest-errors.h  pngstruct.h  readpng.h  readpng2.h  sRGB.h  writepng.h
(+1525 files in other folders)
